[General] add .editorconfig, align text and icons in sidebar, fix sidebar shadow, sidebar css clean up

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ html,
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+  background: var(--background-shadow);
 }
 
 .App .content .updateIcon {
