--- a/src/components/UI/Header/index.css
+++ b/src/components/UI/Header/index.css
@@ -3,7 +3,7 @@
   position: sticky;
   top: 0;
   z-index: 7;
-  background: var(--background-color);
+  background: var(--background-shadow);
   grid-template-columns: 3fr 4fr 2fr 1fr;
   font-family: Cabin;
   font-style: normal;
